[package]
name = "somafm"
description = "A Rust-based command line player for SomaFM radio"
version = "0.2.0"
authors = ["Yuval Adam <_@yuv.al>"]
edition = "2021"
license = "MIT"
keywords = ["radio", "somafm", "media"]
repository = "https://github.com/yuvadm/somafm.rs"

[dependencies]
inquire = "0.7.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
spinners = "4.1.1"
