[package]
name = "somafm"
description = "A Rust-based command line player for SomaFM radio"
version = "0.5.0"
authors = ["Yuval Adam <_@yuv.al>"]
edition = "2021"
license = "MIT"
keywords = ["radio", "somafm", "media"]
repository = "https://github.com/yuvadm/somafm.rs"

[dependencies]
icy-metadata = { version = "0.1.0", path = "../icy-metadata" }
inquire = "0.7.5"
reqwest = { version = "0.12.4", features = ["blocking"] }
rodio = { version = "0.18.1", features = ["symphonia", "symphonia-mp3"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
spinners = "4.1.1"
stream-download = "0.5.2"
tokio = "1.38.0"
